ideas/open issues
----------------------------

LATEST
-----------------------------

iox-wkf 0.9.0 (2017-??-??)
-----------------------------
- add shp2db
- add csv2db
- add shapefileReader
- add shapefileWriter
- ShpReader/ShpWriter: added dbf encoding support
- add setting to customize date/time/timestamp format